fix css errors, value alignments and positioning

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,19 @@
-.no-js #loader { display: none;  }
-.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.no-js #loader {
+    display: none;
+}
+.js #loader {
+    display: block;
+    position: absolute;
+    left: 100px;
+    top: 0;
+}
 .se-pre-con {
     position: fixed;
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background: url(images/loader-64x/Preloader_2.gif) center no-repeat #fff;
 }
 
 body {
@@ -15,8 +21,6 @@ body {
     font-size: 14px;
     letter-spacing: 0.2px;
     line-height: 24px;
-    /*background-color: #1abc9c;*/
-    /*background-color: #4cb4e7; */
     background-color: #3498db;
     width: 100%;
     color: #2C3E50;
@@ -24,7 +28,7 @@ body {
 }
 
 p {
-    margin: 0px;
+    margin: 0;
 }
 .invContainer {
     width: 768px;
@@ -267,8 +271,13 @@ p {
     margin: 0px;
 
 }
+
+.col > * {
+    padding: 0.2em;
+}
+
 .c1 {
-    width: 65%;
+    width: 61%;
 }
 .c2 {
     width: 9%;
@@ -279,7 +288,7 @@ p {
     text-align: right;
 }
 .c4 {
-    width: 11%;
+    width: 15%;
     text-align: right;
 }
 .c5 {
@@ -335,8 +344,6 @@ p {
 
 [contenteditable="true"] {
     padding: 0.2em;
-    -webkit-transition: all 0.15s ease-out;
-    -moz-transition: all 0.15s ease-out;
     transition: all 0.15s ease-out;
 }
 
@@ -353,10 +360,6 @@ p {
     content: attr(placeholder);
     font-weight: 300;
     border-bottom: 1px dashed #DDD;
-    /*color: #666;*/
-    /*content: "\00a0";*/
-    /*background-color: #f0f0f0;*/
-    /*border: 1px dashed #DDD;*/
 }
 
 .fieldsContainer {
@@ -407,7 +410,6 @@ p {
     text-align: center;
     color: #72C475;
     font-weight: 400;
-    /* background-color: #3498db; */
     background-color: white;
     padding: 1em 0 1em 0;
     border: 3px solid #72C475;
@@ -421,23 +423,17 @@ p {
     text-align: center;
     color: white;
     font-weight: 400;
-    /* background-color: #3498db; */
     background-color: #72C475;
     padding: 1em 0 1em 0;
     border: none;
     width: 100%;
     margin: 1em 0 0 0;
     font-size: 1.2em;
-    /**/
-    -webkit-transition: background-color 0.15s, -webkit-transform 0.15s ease-out;
-    -moz-transition: background-color 0.15s, -webkit-transform 0.15s ease-out;
     transition: background-color 0.15s, -webkit-transform 0.15s ease-out;
 }
 
 .mfp-fade.mfp-bg {
     opacity: 0;
-    -webkit-transition: all 0.15s ease-out;
-    -moz-transition: all 0.15s ease-out;
     transition: all 0.15s ease-out;
 }
 
@@ -451,8 +447,6 @@ p {
 /* content at start */
 .mfp-fade.mfp-wrap .mfp-content {
     opacity: 0;
-    -webkit-transition: all 0.15s ease-out;
-    -moz-transition: all 0.15s ease-out;
     transition: all 0.15s ease-out;
 }
 /* content animate it */
@@ -465,7 +459,6 @@ p {
 }
 
 .invButton:hover { 
-    /* background-color: #2980b9; */
     background-color: #61A563;
 }
 
@@ -480,7 +473,6 @@ p {
     width: 100%;
     margin: 1em 0 0 0;
     font-size: 1.2em;
-    /**/
 }
 
 .invButtonConnect:hover {
@@ -678,7 +670,6 @@ p {
     }
     .invSectionInvoiceFor {
         text-align: center;
-        -webkit-order: 0;
         order: 0;
     }
     .invFor {
@@ -691,9 +682,6 @@ p {
     }
     .invDescTitle {
         display: none;
-    }
-    .titleInvoiceDetails {
-        display: ;
     }
     .invItemInvInfo {
         -webkit-flex-direction: column;
@@ -756,11 +744,9 @@ p {
         flex-direction: column;
     }
     .sendFrom {
-        -webkit-order: 2;
         order: 2;
     }
     .sendTo {
-        -webkit-order: 1;
         order: 1;
     }
     .textArea {
